--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,16 @@ services:
       timeout: 5s
       retries: 3
       start_period: 5s
+  redis-events:
+      container_name: redis-events
+      image: redis:latest
+      ports: 
+        - "6379:6379"
+      healthcheck:
+        test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
+        interval: 1s
+        timeout: 3s
+        retries: 5
   auth:
     container_name: auth-service
     build: 
@@ -32,6 +42,22 @@ services:
       - "8090:8090"
     depends_on:
       db:
+        condition: service_healthy
+      dependencies:
+        condition: service_started
+  event:
+    container_name: event-service
+    build: 
+      context: ./cmd/event
+      dockerfile: Dockerfile
+    volumes:
+      - ./logs:/app/logs
+    ports:
+      - "8091:8090"
+    depends_on:
+      db:
+        condition: service_healthy
+      redis-events:
         condition: service_healthy
       dependencies:
         condition: service_started
